--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,7 @@
     "permissions": [
         "activeTab",
         "storage",
-        "scripting",
-        "tabs"
-    ],
-    "host_permissions": [
-        "https://chat.openai.com/*",
-        "https://chatgpt.com/*"
+        "scripting"
     ],
     "action": {
         "default_popup": "popup.html"
